[package]
name = "rpay"
version = "0.1.0"
authors = ["yangdaqiong <yangdaqiong@126.com>"]
description = "rust pay api"
documentation = "https://www.yndkj.com"
edition = "2021"

[dependencies]
anyhow = "1.0.80"
thiserror = "1.0.57"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.0", features = ["blocking", "json","native-tls","__rustls", "native-tls-crate", "multipart"] }
redis = { version = "0.21.0", features = ["r2d2"]}
bytes = { version = "1.1.0", features = ["serde"] }
x509-parser = {version = "0.16.0"}
md5 = { version = "0.7.0" }
sha-1 = { version = "0.10" }
sha2 = "0.11.0-pre.0"
hmac = { version = "0.12.1" }
hex = { version = "0.4.3" }
aes = { version = "0.7.5" }
aes-gcm = { version = "0.10" }
bincode = "1.3.3"
block-modes = "0.8.1"
derive_builder = "0.20.0"
dashmap = "5.3.4"
uuid = { version = "0.7.4", features = ["serde", "v4"] }
rand = "0.8.5"
chrono = "0.4.38"
rsa = { version = "0.9.6", features = ["sha2"] }
rust-crypto = "^0.2"
base64 = "0.21.6"
tracing = "0.1.40"

[features]
default = ["wechat"]
wechat = []

[dev-dependencies]
dotenvy = "0.15.7"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tokio = { version = "1.36.0", features = ["full"] }